--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, sequi vitae incidunt quo qui culpa ratione, quia nobis facere reprehenderit, vero adipisci. Ratione facilis odit saepe molestiae perspiciatis quos maxime.</p>
-
+  </head>
+  <body>
+    <h1>Hello world!!!</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, sequi vitae
+      incidunt quo qui culpa ratione, quia nobis facere reprehenderit, vero
+      adipisci. Ratione facilis odit saepe molestiae perspiciatis quos maxime.
+    </p>
 
     <script src="js/script.js
     "></script>
-</body>
+  </body>
 </html>
