--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello world!!!</h1>
+    <h1>Hello world!</h1>
     <h2>Hi Yan</h2>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, sequi vitae
